core: Fix double-free protection assert when unloading a plugin twice

When calling g_module_close() twice on the same module, it throws a
g_return_if_fail() assertion stating ref_count > 0 fails. It's
effectively like g_object_unref().

This patch prevents g_module_close() being called twice on the same
module by unsetting it from the plugin instance when closing it
in grl_registry_unload_plugin().

https://bugzilla.gnome.org/show_bug.cgi?id=694390